--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.projectKey=TestPython
-sonar.projectName=TestPython
+sonar.projectKey=fp-test8
+sonar.projectName=fp-test8
 sonar.sourceEncoding=UTF-8
 #Make sure that sonar sources folder is accurate
-sonar.sources="src"
-sonar.login=e248e7efeb588f091543c9b8f4b290506f14a268
+sonar.sources=.
+sonar.login=aa025dd41b30672eb1f649a26ba179facc122ef8
 sonar.host.url=http://localhost:9000
 #uncomment this line if you would like to debug your SonarScanner analysis
 #sonar.verbose=true
